test/src/e2e_vm_tests/test_programs/should_fail/main_args/main_args_mutation/src/main.sw
script;

struct TestStruct {
    val: u64,
}

fn main(ref mut baba: TestStruct) -> u64 {
    baba.val += 1;
    baba.val
}
